k8s/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
