k8s/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: home-assistant
spec:
  rules:
    - host: home-assistant.homelab.adtennant.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
  tls:
    - hosts:
        - home-assistant.homelab.adtennant.dev
      secretName: home-assistant-tls
